--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -19,7 +19,9 @@ jobs:
         go-version: 1.16
 
     - name: Build
+      run: cd /app
       run: go build -v ./...
 
     - name: Test
+      run: cd/app
       run: go test -v ./tests
