--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -19,7 +19,7 @@ jobs:
         go-version: 1.16
 
     - name: Build 
-      run: cd/app && go build -v ./...
+      run: cd app/ && go build -v ./...
 
     - name: Test
-      run: cd/app && go test -v ./tests
+      run: cd app/ && go test -v ./tests
